 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 7
============
* [DanielPharos]: Fixed long-standing bug with character output (backslashes) in the console. Note:
          - this changes the font used.

* [DanielPharos]: Fixed the VIDEO enumeration for system details info.

* [DanielPharos]: Fixed the Reset-button in the Configuration to do what people expected it to do.

* [DanielPharos]: Fixed several leaks on error code paths, and a wrong Win32 API call
          - when starting external processes.

* [DanielPharos]: Added FastMove and FastCode for better performance.

* [DanielPharos]: Stop access violation and other weird errors if Glide library wasn't
          - initialized properly.

* [DanielPharos]: Fix for texture scales when importing brushDef2 and brushDef3.

* [DanielPharos]: Fix console error for texture-flags RMB menu if game paths are not configured.

* [DanielPharos]: Stop a failed initialization of a viewport causing access violations.

* [DanielPharos]: Fix for the long-standing bug where float-specifics were not working
          - in Wine, and on non-Latin-alphabet Windows (for example, Chinese Windows).

* [cdunde]: Fixed possible dupe component names from sneaking through.

* [DanielPharos]: Fixes for brushDef2 and brushDef3 texture loading.

6.6.0 Beta 6
============
* [cdunde/DanielPharos]: Started HL2 Exporter support but not completed yet.
          - Open the plugins/ie_md0_HL2_export.py file with any text editor for details at top of file.

* [cdunde/DanielPharos]: Removed game support for Xonotic due to improper texture paths.

* [cdunde]: Added full game support for Xonotic including .md3 model displaying.
